488 km de ida